tests/ui/mismatched_types/array-arg-expected-usize.stderr
error[E0308]: mismatched types
  --> $DIR/array-arg-expected-usize.rs:9:9
   |
LL |     bar(foo);
   |     --- ^^^ expected `usize`, found `[u8; 4]`
   |     |
   |     arguments to this function are incorrect
   |
note: function defined here
  --> $DIR/array-arg-expected-usize.rs:5:4
   |
LL | fn bar(int_param: usize) {}
   |    ^^^ ----------------

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
